vault/bsc/probes/probe_switch_owned_fallthru.expected.stderr
<probe>:25:22: error: use of moved value: `p`
        r += consume(p);  // should ERROR if c==1, valid if c==2
                     ^
1 error generated.
